# mastr-cim

./: LICENSE.txt  README.md  generate-metadata.sh  main.py  metadata.json  pyproject.toml
schema/: cim-mastr-data-profile.yml  map.yml  mastr.yml
